crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__variable__collide_with_parameter.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/collide_with_parameter.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Already a variable with this name in this scope: `a`
   ╭─[craftinginterpreters/test/variable/collide_with_parameter.lox:2:7]
   │
 2 │   var a; // Error at 'a': Already a variable with this name in this scope.
   │       ─  
───╯
