crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__variable__duplicate_local.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/duplicate_local.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Already a variable with this name in this scope: `a`
   ╭─[craftinginterpreters/test/variable/duplicate_local.lox:3:7]
   │
 3 │   var a = "other"; // Error at 'a': Already a variable with this name in this scope.
   │       ─  
───╯
