crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__variable__early_bound.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/early_bound.lox
---
success: true
exit_code: 0
----- stdout -----
outer
outer

----- stderr -----
