crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__variable__in_nested_block.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/in_nested_block.lox
---
success: true
exit_code: 0
----- stdout -----
outer

----- stderr -----
