crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__variable__local_from_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/local_from_method.lox
---
success: true
exit_code: 0
----- stdout -----
variable

----- stderr -----
