crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__variable__redefine_global.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/redefine_global.lox
---
success: true
exit_code: 0
----- stdout -----
2

----- stderr -----
