crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__variable__scope_reuse_in_different_blocks.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/scope_reuse_in_different_blocks.lox
---
success: true
exit_code: 0
----- stdout -----
first
second

----- stderr -----
