crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__variable__shadow_and_local.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/shadow_and_local.lox
---
success: true
exit_code: 0
----- stdout -----
outer
inner

----- stderr -----
